tests/compile_fail/conflicting_generated_config.c
#define MRES_CONFIG_HEADER "conflicting_generated_config/mres_config.h"
#include "mres.h"

int main(void)
{
    return 0;
}
